[workspace]
resolver = "2"
members = [
	"contracts/arbitrage-apes*",
]

[workspace.dependencies]
soroban-sdk = "22.0.8"
stellar-ownable = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
stellar-non-fungible = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
stellar-ownable-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
stellar-upgradeable = { git = "https://github.com/OpenZeppelin/stellar-contracts" }
stellar-upgradeable-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
