[package]
name = "arbitrage-apes"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["AnonVeryRecognizableGuyWithPurpleHair"]
repository = "github.com/anataliocs/stellar-arbitrage-apes-future-yacht-club"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-non-fungible = { workspace = true }
stellar-default-impl-macro = { workspace = true }
stellar-ownable-macro = { workspace = true }
stellar-ownable = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


